<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.whipped.app.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/select_whip"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:tag="@string/whip_1"
            android:id="@+id/whip_pic_1"
            android:onClick="whipSelected"
            android:src="@drawable/whip_1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:tag="@string/whip_2"
            android:id="@+id/whip_pic_2"
            android:onClick="whipSelected"
            android:src="@drawable/whip_2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:tag="@string/whip_3"
            android:id="@+id/whip_pic_3"
            android:onClick="whipSelected"
            android:src="@drawable/whip_3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:tag="@string/whip_4"
            android:id="@+id/whip_pic_4"
            android:onClick="whipSelected"
            android:src="@drawable/whip_4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:tag="@string/whip_5"
            android:id="@+id/whip_pic_5"
            android:onClick="whipSelected"
            android:src="@drawable/whip_5"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:tag="@string/whip_6"
            android:id="@+id/whip_pic_6"
            android:onClick="whipSelected"
            android:src="@drawable/whip_6"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
